Added support to install multiple tomcat instances.